# libgit2-travel

./: .gitignore  CMakeLists.txt  README.md  core.c  core.h  main.c  main.cpp  wapper.h
